--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,12 +9,15 @@
 
 <body>
     <header>
-        <h1><strong><a href="/">William C. DeMary</a></strong> | <em>My thoughts on philosophy, religion, and society</em></h1>
-        <nav>
-            <ul>
-                <li><a href="/publications.html">Publications</a></li>
-            </ul>
-        </nav>
+        <table>
+            <tbody>
+                <tr>
+                    <td><h1><a href="/">William C. DeMary</a></h1></td>
+                    <td><p>Thoughts on philosophy, religion, and society</p></td>
+                </tr>
+            </tbody>
+        </table>
+        <hr>
     </header>
     <article>
         <h1>{{ page.title }}</h1>
@@ -23,7 +26,7 @@
     </article>
     <footer>
         <div class="copyright">
-            <p>Copyright &copy; 2023 William C. DeMary. All rights reserved.</p>
+            <p>Copyright &copy; 2023&ndash;2024 William C. DeMary. All rights reserved.</p>
         </div>
     </footer>
 </body>
