Fixing styling for mobile browsers

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@
             <tbody>
                 <tr>
                     <td><h1><a href="/">William C. DeMary</a></h1></td>
-                    <td><p>Thoughts on philosophy, religion, and society</p></td>
+                    <td><p>Thoughts on philosophy, religion, and social issues</p></td>
                 </tr>
             </tbody>
         </table>
