--- a/css/wcdemary.sass
+++ b/css/wcdemary.sass
@@ -8,6 +8,12 @@ html, body
     padding: 0 0 0 0
     font-family: Roboto, sans-serif
 
+body
+    display: flex
+    flex-direction: column
+    min-height: 100vh
+    min-height: 100svh
+
 header
     background-image: linear-gradient(to right, #fdffcc, #ccffdc, #cdecff, #ffc0c7)
 
@@ -21,7 +27,6 @@ header
 
             h1
                 font-family: 'Bebas Neue', sans-serif
-                font-size: 30pt
                 font-weight: normal
 
                 a
@@ -34,7 +39,6 @@ header
 
             p
                 font-family: 'Bebas Neue', sans-serif
-                font-size: 15pt
                 font-weight: normal
 
     nav
@@ -50,35 +54,33 @@ header
 
                 p
                     font-family: 'Roboto', sans-serif
-                    font-size: 14pt
                     font-weight: normal
 
     hr
         clear: both
+        border-color: rgba(0, 0, 0, 0)
+        margin-bottom: 0
 
 main, article
     clear: both
 
     margin-left: 5%
     margin-right: 5%
+    margin-bottom: 15pt
     padding-top: 5pt
     width: 90%
 
     font-family: Crimson Pro, serif
-    font-size: 14pt
     font-weight: normal
 
     h1
         margin-bottom: 0pt
-        font-size: 25pt
         font-weight: bold
 
     h2
-        font-size: 20pt
         font-weight: bold
 
     h3
-        font-size: 18pt
         font-weight: bold
 
     p, li
@@ -102,10 +104,61 @@ main, article
 
 footer
     clear: both
-    margin-top: 25pt
+    margin-top: auto
     padding: 10pt 20pt 10pt 20pt
     background-color: #dfe6e9
 
     p
         text-align: center
+
+@media screen and (min-width: 1001px)
+    header 
+        h1
+            font-size: 30pt
+
+        p
+            font-size: 15pt
+
+        nav ul
+            font-size: 14pt
+
+    main
+        font-size: 14pt
+
+        h1
+            font-size: 25pt
+
+        h2
+            font-size: 20pt
+
+        h3
+            font-size: 18pt
+
+    footer p
         font-size: 10pt
+
+@media screen and (max-width: 1000px)
+    header 
+        h1
+            font-size: 5vh
+
+        p
+            display: none
+
+        nav ul
+            font-size: 2.4vh
+
+    main
+        font-size: 2.4vh
+
+        h1
+            font-size: 5vh
+
+        h2
+            font-size: 4vh
+
+        h3
+            font-size: 3vh
+
+    footer p
+        font-size: 1vh
