Adding extended Trinitarianism post; style changes

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,7 +27,7 @@
 
     <footer>
         <div class="copyright">
-            <p>Copyright &copy; 2023&ndash;2024 William C. DeMary. All rights reserved.</p>
+            <p>Copyright &copy; 2023&ndash;{{ site.time | date: '%Y' }} William C. DeMary. All rights reserved.</p>
         </div>
     </footer>
 </body>
