--- a/css/wcdemary.sass
+++ b/css/wcdemary.sass
@@ -94,9 +94,13 @@ main, article
             text-decoration: underline
             text-underline-offset: 0.3em
 
+        sup
+            vertical-align: top
+
     a
         color: black
         text-decoration: none
+        word-break: break-word
 
     a:hover
         text-decoration: underline
@@ -122,7 +126,7 @@ footer
         nav ul
             font-size: 14pt
 
-    main
+    main, article
         font-size: 14pt
 
         h1
@@ -133,6 +137,9 @@ footer
 
         h3
             font-size: 18pt
+
+        p
+            font-size: 14pt
 
     footer p
         font-size: 10pt
@@ -148,7 +155,7 @@ footer
         nav ul
             font-size: 2.4vh
 
-    main
+    main, article
         font-size: 2.4vh
 
         h1
@@ -158,6 +165,9 @@ footer
             font-size: 4vh
 
         h3
+            font-size: 3vh
+
+        p
             font-size: 3vh
 
     footer p
