--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,7 @@
     </article>
     <footer>
         <div class="copyright">
-            <p>Copyright &copy; 2023&ndash;2024 William C. DeMary. All rights reserved.</p>
+            <p>Copyright &copy; 2023&ndash;{{ site.time | date: '%Y' }} William C. DeMary. All rights reserved.</p>
         </div>
     </footer>
 </body>
