--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,25 +9,23 @@
 
 <body>
     <header>
-        <table>
-            <tbody>
-                <tr>
-                    <td><h1><a href="/">William C. DeMary</a></h1></td>
-                    <td><p>Thoughts on philosophy, religion, and social issues</p></td>
-                </tr>
-            </tbody>
-        </table>
-        <hr>
-    </header>
-    <article>
-        <h1>{{ page.title }}</h1>
-        <p class="date"><strong>{{ page.date | date_to_long_string }}</strong></p>
-        {{ content }}
-    </article>
-    <footer>
-        <div class="copyright">
-            <p>Copyright &copy; 2023&ndash;{{ site.time | date: '%Y' }} William C. DeMary. All rights reserved.</p>
+        <div class="col-12">
+            <h1><a href="/">William C. DeMary</a></h1>
+            <p>Thoughts on philosophy, religion, and social issues</p>
         </div>
+    </header>
+
+    <article>
+        <div class="col-1"></div>
+        <div class="col-10">
+            <h1>{{ page.title }}</h1>
+            <p class="date"><strong>{{ page.date | date_to_long_string }}</strong></p>
+            {{ content }}
+        </div>
+    </article>
+    
+    <footer>
+        <p>Copyright &copy; 2023&ndash;{{ site.time | date: '%Y' }} William C. DeMary. All rights reserved.</p>
     </footer>
 </body>
 
