--- a/css/wcdemary.sass
+++ b/css/wcdemary.sass
@@ -3,6 +3,13 @@
     
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Crimson+Pro:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap')
 
+*
+    box-sizing: border-box
+
+[class*='col-']
+    float: left
+    padding: 15pt
+    
 html, body
     margin: 0 0 0 0
     padding: 0 0 0 0
@@ -14,62 +21,33 @@ body
     min-height: 100vh
     min-height: 100svh
 
+header::after, article:after, footer::after
+    content: ''
+    clear: both
+    display: table
+
 header
     background-image: linear-gradient(to right, #fdffcc, #ccffdc, #cdecff, #ffc0c7)
 
-    table
-        margin-left: 15pt
+    h1, p
         float: left
+        font-family: 'Bebas Neue', sans-serif
+        font-weight: normal
+        margin-left: 15pt
 
-        td
-            vertical-align: middle
-            padding-right: 15pt
+        a
+            color: black
+            text-decoration: none
 
-            h1
-                font-family: 'Bebas Neue', sans-serif
-                font-weight: normal
+        a:hover
+            text-decoration: underline
+            text-underline-offset: 0.3em
 
-                a
-                    color: black
-                    text-decoration: none
+    p
+        margin-top: 30pt
+        margin-left: 20pt
 
-                a:hover
-                    text-decoration: underline
-                    text-underline-offset: 0.3em
-
-            p
-                font-family: 'Bebas Neue', sans-serif
-                font-weight: normal
-
-    nav
-        margin-top: 22pt
-        float: right
-        
-        ul
-            list-style-type: none
-
-            li
-                float: left
-                padding-right: 10pt
-
-                p
-                    font-family: 'Roboto', sans-serif
-                    font-weight: normal
-
-    hr
-        clear: both
-        border-color: rgba(0, 0, 0, 0)
-        margin-bottom: 0
-
-main, article
-    clear: both
-
-    margin-left: 5%
-    margin-right: 5%
-    margin-bottom: 15pt
-    padding-top: 5pt
-    width: 90%
-
+article, main
     font-family: Crimson Pro, serif
     font-weight: normal
 
@@ -79,6 +57,7 @@ main, article
 
     h2
         font-weight: bold
+        line-height: 1.2em
 
     h3
         font-weight: bold
@@ -106,8 +85,17 @@ main, article
         text-decoration: underline
         text-underline-offset: 0.3em
 
+main
+    div.col-4
+        div
+            margin: 5pt 2.5pt 5pt 2.5pt
+            padding: 10pt 10pt 10pt 10pt
+            background: #F3FFF2
+            border: 1pt solid grey
+            box-shadow: 2px 2px 2px grey
+            border-radius: 5pt
+
 footer
-    clear: both
     margin-top: auto
     padding: 10pt 20pt 10pt 20pt
     background-color: #dfe6e9
@@ -115,7 +103,11 @@ footer
     p
         text-align: center
 
-@media screen and (min-width: 1001px)
+@media screen and (min-width: 1000px)
+    @for $i from 1 through 12
+        .col-#{$i}
+            width: #{$i * (100/12) + "%"}
+
     header 
         h1
             font-size: 30pt
@@ -141,10 +133,23 @@ footer
         p
             font-size: 14pt
 
+    main
+        div.col-4
+            div
+                min-height: 300pt
+                max-height: 300pt
+                overflow-y: auto
+                scrollbar-color: grey
+                scrollbar-width: thin
+
     footer p
         font-size: 10pt
 
 @media screen and (max-width: 1000px)
+    @for $i from 1 through 12
+        .col-#{$i}
+            width: 100%
+
     header 
         h1
             font-size: 5vh
