--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>{{ page.title }}</title>
+    <title>William C. DeMary | {{ page.title }}</title>
     <link rel="stylesheet" href="/css/wcdemary.css">
 </head>
 
@@ -16,8 +16,10 @@
     </header>
 
     <article>
-        <h1>{{ page.title }}</h1>
-        {{ content }}
+        <div class="col-1"></div>
+        <div class="col-10">
+            {{ content }}
+        </div>
     </article>
 
     <footer>
