--- a/css/wcdemary.sass
+++ b/css/wcdemary.sass
@@ -127,10 +127,15 @@ footer
         h2
             font-size: 20pt
 
+            p
+                margin-top: 0
+                margin-bottom: 0
+                font-size: inherit
+
         h3
             font-size: 18pt
 
-        p
+        p, li
             font-size: 14pt
 
     main
@@ -169,10 +174,13 @@ footer
         h2
             font-size: 4vh
 
+            p
+                font-size: inherit
+
         h3
             font-size: 3vh
 
-        p
+        p, li
             font-size: 3vh
 
     footer p
